# regime-monte-carlo

./: README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_data.py  test_gbm.py  test_risk.py
src/rmc/: __init__.py  cli.py  config.py
src/rmc/data/: __init__.py  ingest.py
src/rmc/evaluation/: calibration.py  risk.py
src/rmc/models/: gbm.py  regime.py  simulate.py
src/rmc/visualization/: plots.py
tests/: test_calibration.py  test_regime.py  test_simulate.py
